make basic changes